Archive2/73/15df7cbc9aa820/output
main.cpp:13:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<int, short, char>, list<> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<int, short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:28:11: note: in instantiation of template type alias 'reverse' requested here
using rL1=reverse<L1>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:13:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<short, char>, list<int> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<short, char>, list<int> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<int, short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:28:11: note: in instantiation of template type alias 'reverse' requested here
using rL1=reverse<L1>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:13:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<char>, list<int, short> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<char>, list<int, short> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<short, char>, list<int> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<int, short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:28:11: note: in instantiation of template type alias 'reverse' requested here
using rL1=reverse<L1>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:20:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<>, list<int, short, char> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<>, list<int, short, char> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<char>, list<int, short> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<short, char>, list<int> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<int, short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:28:11: note: in instantiation of template type alias 'reverse' requested here
using rL1=reverse<L1>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:13:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<short, char>, list<> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:31:11: note: in instantiation of template type alias 'reverse' requested here
using rL2=reverse<L2>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:13:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<char>, list<short> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<char>, list<short> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:31:11: note: in instantiation of template type alias 'reverse' requested here
using rL2=reverse<L2>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
main.cpp:20:22: error: implicit instantiation of undefined template 'debug<reverse_impl<list<>, list<short, char> > >'
    using t=typename debug<reverse_impl>::type;
                     ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<>, list<short, char> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:14:29: note: in instantiation of template class 'reverse_impl<list<char>, list<short> >' requested here
    using result = typename reverse_impl<list<TAIL...>,list<Ts...,HEAD>>::result;
                            ^
main.cpp:25:1: note: in instantiation of template class 'reverse_impl<list<short, char>, list<> >' requested here
using reverse = typename reverse_impl<LIST,list<>>::result;
^
main.cpp:31:11: note: in instantiation of template type alias 'reverse' requested here
using rL2=reverse<L2>;
          ^
main.cpp:4:27: note: template is declared here
template<typename> struct debug;
                          ^
7 errors generated.
